--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "backend/server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start": "node backend/server.js"
@@ -20,6 +20,7 @@
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "redis": "^5.8.2",
     "stripe": "^18.4.0"
   },
   "devDependencies": {
